# GitArchive

./: .gitignore  README.md  pyproject.toml
gitarchive/: main.py
templates/: index.html
